MiniProject/src/objects/Telecalling__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Lead_on__c</fullName>
        <label>Contact Lead on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_City__c</fullName>
        <label>Lead City</label>
        <picklist>
            <picklistValues>
                <fullName>Munbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nashik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pune</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Priority__c</fullName>
        <label>Lead Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>p3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>p4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>related_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Telecallings</relationshipLabel>
        <relationshipName>Telecallings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Telecalling</label>
    <nameField>
        <label>Telecalling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Telecallings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>